sql/partition_info.cc
@@ -956,11 +956,13 @@ bool partition_info::check_partition_info(THD *thd, handlerton **eng_type,
 #endif
       {
         if (part_elem->data_file_name)
-          push_warning(thd, MYSQL_ERROR::WARN_LEVEL_WARN, 0,
-                       "DATA DIRECTORY option ignored");
+          push_warning_printf(thd, MYSQL_ERROR::WARN_LEVEL_WARN,
+                              WARN_OPTION_IGNORED, ER(WARN_OPTION_IGNORED),
+                              "DATA DIRECTORY");
         if (part_elem->index_file_name)
-          push_warning(thd, MYSQL_ERROR::WARN_LEVEL_WARN, 0,
-                       "INDEX DIRECTORY option ignored");
+          push_warning_printf(thd, MYSQL_ERROR::WARN_LEVEL_WARN,
+                              WARN_OPTION_IGNORED,ER(WARN_OPTION_IGNORED),
+                              "INDEX DIRECTORY");
         part_elem->data_file_name= part_elem->index_file_name= NULL;
       }
       if (!is_sub_partitioned())
